--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
